# fast_zero

./: .venv.example  README.md  database.db  pyproject.toml
fast_zero/: app.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todo.py  users.py
migrations/: env.py
migrations/versions/: 4ebad65dd9b0_create_todos_table.py  b9f281ebbec3_create_users_table.py  cca0bc04ea40_alter_table_users.py  d2b17392126b_.py
tests/: conftest.py  test_app_main.py  test_app_users.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
