[project]
name = "fast_zero"
version = "0.1.0"
description = "FastAPI Project"
authors = [{ name = "Wanderlei Hüttel", email = "wanderlei.huttel@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.1",
    "fastapi[standard]>=0.115.6",
    "pwdlib[argon2]>=0.2.1",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.37",
    "tzdata>=2025.1",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-cov>=6.0.0", "ruff>=0.9.6", "taskipy>=1.14.1"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
indent-width = 4
extend-exclude = ['migrations']
# Exclude a variety of commonly ignored directories.
exclude = [
    '.bzr',
    '.direnv',
    '.eggs',
    '.git',
    '.git-rewrite',
    '.hg',
    '.ipynb_checkpoints',
    '.mypy_cache',
    '.nox',
    '.pants.d',
    '.pyenv',
    '.pytest_cache',
    '.pytype',
    '.ruff_cache',
    '.svn',
    '.tox',
    '.venv',
    '.vscode',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'node_modules',
    'site-packages',
    'venv',
]

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = ['E402', 'F811']

[tool.ruff.format]
preview = true
quote-style = 'single'
indent-style = 'space'
line-ending = 'lf'

[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
pre_format = 'ruff check --fix'
format = 'ruff check . --fix && ruff format .'
#run = 'fastapi dev fast_zero/app.py'
run = 'uvicorn fast_zero.app:app --reload --reload-delay 1.00'
pre_test = 'task lint'
kill = 'taskkill /IM python.exe /F'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'
